2017-11-26  Bruno Haible  <bruno@clisp.org>

	ari_asm for HPPA: Fix build failure with the GNU assembler.
	* ari_asm_hppa.d: Use pseudo-ops that GNU as understands.

2017-11-26  Bruno Haible  <bruno@clisp.org>

	ari_asm for ARM: Don't use a global variable as return value.
	* ari_asm_arm.d (asm_mulu32_64): Renamed from asm_mulu32_. Don't
	access mulu32_high.
	(asm_divu_3216_1616_): Don't access divu_16_rest.
	(asm_divu_6432_3232_): Don't access divu_32_rest.
	* arilev0.d (retval64_r0, retval64_r1): New macros.
	(mulu32, mulu32_, divu_3216_1616, divu_6432_3232, divu_6432_3232_)
	[ARM]: Get a 2x32-bit result from the registers r0,r1.

2017-11-26  Bruno Haible  <bruno@clisp.org>

	Simplify ari_asm for ARM.
	* ari_asm_arm.d: Remove support for RISC OS syntax.

2017-11-26  Bruno Haible  <bruno@clisp.org>

	Add comments.
	* ari_asm_*.d: Add comments about the ABIs. Info taken from libffcall.

2017-11-26  Bruno Haible  <bruno@clisp.org>

	Avoid an infinite recursion when clisp is started under a broken gdb.
	* stream.d (low_read_unbuffered_handle): Don't signal an EIO error
	from the TERMINAL-STREAM.

2017-11-26  Bruno Haible  <bruno@clisp.org>

	Disable generational GC on Linux/mips*.
	Generational GC on Linux/mips* works in QEMU-based virtual machines,
	but not on EdgeRouter Pro (Cavium Octeon II) hardware.
	* lispbibl.d (GENERATIONAL_GC): Don't enable on Linux/mips*.

2017-11-26  Bruno Haible  <bruno@clisp.org>

	Fix a bug in the optimizations for SPARC64.
	* arilev0.d (divu_3216_1616, divu_3216_3216): Use a temporary variable
	of type uint32, not uint16, to force a zero-extend before the asm-coded
	instructions.

2017-11-26  Bruno Haible  <bruno@clisp.org>

	Fix bugs in ari_asm for sparc64.
	* ari_asm_sparc64.d (asm_or_loop_up, asm_xor_loop_up, asm_and_loop_up,
	asm_eqv_loop_up, asm_nand_loop_up, asm_nor_loop_up, asm_andc2_loop_up,
	asm_orc2_loop_up) [COUNTER_LOOPS]: Write into xptr[], not into yptr[].
	(asm_add_loop_down): Write result into the right location.